# trajectory_visualizer

./: CMakeLists.txt  README.md  package.xml
config/: trajectory_visualizer.yaml
include/trajectory_visualizer/: trajectory_publisher_saver.hpp  trajectory_reader_publisher.hpp
launch/: trajectory_pub_saver.launch  trajectory_publisher_saver.launch  trajectory_reader_publisher.launch
rviz/: visualize.rviz
src/: trajectory_pub_save.cpp  trajectory_publisher_saver.cpp  trajectory_publisher_saver_node.cpp  trajectory_read_pub.cpp  trajectory_reader_publisher.cpp  trajectory_reader_publisher_node.cpp
